Test and cli runner